Archive2/10/34f79a323b3812/output
main.cpp: In function 'int main()':
main.cpp:20:10: error: no matching function for call to 'B::f(int&)'
     b.f(a);
          ^
main.cpp:20:10: note: candidate is:
main.cpp:12:18: note: virtual void B::f(int*) <near match>
     virtual void f(int*) {}
                  ^
main.cpp:12:18: note:   no known conversion for argument 1 from 'int' to 'int*'
main.cpp:22:18: error: 'words' was not declared in this scope
     std::cout << words << std::endl;
                  ^
